tests/compile/shader_modules/return_types.clang.stderr
In file included from return_types.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:11:
return_handler.hpp:53:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)2 == rcgp::ShaderStage::eVertex'
   53 |         static_assert(S == ShaderStage::eVertex);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eFragment, rcgp::vector<float, 3>>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:53:18: note: expression evaluates to '2 == 1'
   53 |         static_assert(S == ShaderStage::eVertex);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:60:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)2 == rcgp::ShaderStage::eVertex'
   60 |         static_assert(S == ShaderStage::eVertex);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eFragment, rcgp::scalar<unsigned int>>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:60:18: note: expression evaluates to '2 == 1'
   60 |         static_assert(S == ShaderStage::eVertex);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:67:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eVertex'
   67 |         static_assert(S == ShaderStage::eVertex);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eCompute, rcgp::vector<float, 3>>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:67:18: note: expression evaluates to '3 == 1'
   67 |         static_assert(S == ShaderStage::eVertex);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:90:17: error: static assertion failed
   90 |                 static_assert(false);
      |                               ^~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eCompute, rcgp::vector<float, 4>>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
In file included from return_types.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:11:
return_handler.hpp:90:17: error: static assertion failed
   90 |                 static_assert(false);
      |                               ^~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eMesh, rcgp::vector<float, 4>>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
In file included from return_types.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:11:
return_handler.hpp:99:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)1 == rcgp::ShaderStage::eSubroutine'
   99 |         static_assert(S == ShaderStage::eSubroutine);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eVertex, MyOutput>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:99:18: note: expression evaluates to '1 == 0'
   99 |         static_assert(S == ShaderStage::eSubroutine);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:99:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)2 == rcgp::ShaderStage::eSubroutine'
   99 |         static_assert(S == ShaderStage::eSubroutine);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eFragment, MyOutput>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:99:18: note: expression evaluates to '2 == 0'
   99 |         static_assert(S == ShaderStage::eSubroutine);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
7 errors generated.
